--- a/assets/css/space.css
+++ b/assets/css/space.css
@@ -26,21 +26,20 @@ html, body {
 /* ☀ SOLAR SYSTEM */
 #solar-system {
   position: fixed;
-  inset: 0;
-  margin: auto;
+  top: 50%;
+  left: 50%;
 
   width: 1400px;
   height: 1400px;
+
+  transform: translate(-50%, -50%) scale(1.25);
+  transform-origin: center;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  transform: scale(1.25);
-  transform-origin: center;
-
   z-index: 2;
-  pointer-events: none;
 }
 
 /* SUN */
@@ -79,4 +78,16 @@ html, body {
   border-radius: 50%;
   background-size: cover;
   background-position: center;
+}
+
+.sun {
+  outline: 2px solid red;
+}
+
+#starfield {
+  z-index: 0;
+}
+
+#solar-system {
+  z-index: 10;
 }
